--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Gilvan Henrique Dantas",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "sqlite3": "^4.2.0"
